# sensor_engineer

./: CMakeLists.txt  README.md
Camera/: README.md
ExtendedKalmanFilter/src/: highway.h  tools.h
FeatureMatching-Camera/: CMakeLists.txt  README.md
FeatureMatching-Camera/src/: featureExtraction.cpp  matching2D.cpp
Filters/: CMakeLists.txt  README.md
Filters/src/: highway.h  tools.cpp
Filters/src/filters/: README.md
Filters/src/filters/ckf/: CKF_README.md  README.md  ckf.cpp  ckf.h
Filters/src/filters/ekf/: README.md  ekf.cpp  ekf.hpp
Filters/src/filters/iekf/: README.md  iekf.cpp  iekf.hpp
Filters/src/filters/imm/: IMM.cpp  IMM.hpp  IMM_README.md  README.md
Filters/src/filters/lag_smoother/: README.md  ekf_fixed_lag_smoother.cpp  ekf_fixed_lag_smoother.h  ukf_fixed_lag_smoother.cpp  ukf_fixed_lag_smoother.h
Filters/src/filters/mhe/: README.md  mhe.cpp  mhe.h
Filters/src/filters/pf/: README.md  pf.cpp  pf.h
Filters/src/filters/rts/: README.md  ekf_rts_smoother.cpp  ekf_rts_smoother.h  ukf_rts_smoother.cpp  ukf_rts_smoother.h
Filters/src/filters/ukf/: README.md  ukf.cpp  ukf.h
Filters/src/motion_models/: README.md  ctra_ukf.cpp  ctrv_ukf.h  cv_ekf.cpp
Filters/src/render/: render.h
FixedWing-Control/: .gitignore  README.md  fixed_wing_project.py  plane_control.py
FixedWing-Control/FixedWing/: Integrator Windup.ipynb
FixedWing-Control/FixedWing/longitudinal_model/: Longitudinal model-Student.ipynb  complex_exponentials.ipynb
KalmanFillter/: README.md
ObstacleDetection-Lidar/: .gitignore
ObstacleDetection-Lidar/src/: environment.cpp  processPointClouds.h
ObstacleDetection-Lidar/src/quiz/cluster/: CMakeLists.txt
ObstacleDetection-Lidar/src/quiz/ransac/: CMakeLists.txt
ObstacleDetection-Lidar/src/quiz/ransac/cmake/Eigen3Compat/: Eigen3Config.cmake
QuadrotorStateEstimation/: CMakeLists.txt  README.md
QuadrotorStateEstimation/src/: QuadEstimatorEKF.cpp
Radar/: ReadMe.md
SensorFusion-CameraLidar/: CMakeLists.txt  README.md
SensorFusion-CameraLidar/src/: cam_Fusion.cpp  cameraLidar.cpp
SensorFusion-ObjectTracking/: .gitignore  CMakeLists.txt  README.md
SensorFusion-ObjectTracking/src/: tools.cpp
SensorFusion-ObjectTracking/src/filters/: README.md
SensorFusion-ObjectTracking/src/filters/ckf/: ckf.cpp
SensorFusion-ObjectTracking/src/filters/imm/: README.md
SensorFusion-ObjectTracking/src/filters/pf/: README.md  pf.cpp
SensorFusion-ObjectTracking/src/filters/ukf/: README.md  ukf.cpp
SensorFusion-ObjectTracking/src/motion_models/: ca_ekf.cpp  ctrv_ukf.cpp
SensorFusion-RadarLidar/src/: main.cpp
SensorFusion-RadarLidar/src/filters/ckf/: README.md
SensorFusion-RadarLidar/src/filters/ekf/: ekf.hpp
SensorFusion-RadarLidar/src/filters/iekf/: iekf.cpp
SensorFusion-RadarLidar/src/filters/lag_smoother/: ukf_fixed_lag_smoother.cpp
SensorFusion-RadarLidar/src/filters/mhe/: mhe.cpp
SensorFusion-RadarLidar/src/filters/rts/: ekf_rts_smoother.cpp  ekf_rts_smoother.h  ukf_rts_smoother.cpp
SensorFusion-RadarLidar/src/filters/ukf/: ukf.h
SensorFusion-RadarLidar/src/motion_models/: ca_ekf.h  ctra_ukf.h  cv_ekf.h
UnscentedKalmanFilter/: README.md
lidar/: .gitignore  README.md
src/: processPointClouds.cpp
src/quiz/cluster/: cluster.cpp  kdtree.h
src/quiz/cluster/cmake/Eigen3Compat/: Eigen3ConfigVersion.cmake
src/quiz/ransac/: ransac2d.cpp
